--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -237,7 +237,7 @@ doi = {10.1287/ijoc.6.1.82},
 masid = {4134548}
 }
 
-@article{BAlas-1980,
+@article{Balas-1980,
 author = {Egon Balas and Clarence H. Martin},
 title = {{Pivot and Complement--A Heuristic for 0-1 Programming}},
 journal = {Management Science},
@@ -862,3 +862,33 @@ masid = {694811}
   publisher={Taylor \& Francis}
 }
 
+@incollection{puchinger2006core,
+  title={The core concept for the multidimensional knapsack problem},
+  author={Puchinger, Jakob and Raidl, G{\"u}nther R and Pferschy, Ulrich},
+  booktitle={Evolutionary Computation in Combinatorial Optimization},
+  pages={195--208},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{balas1980algorithm,
+  title={An algorithm for large zero-one knapsack problems},
+  author={Balas, Egon and Zemel, Eitan},
+  journal={operations Research},
+  volume={28},
+  number={5},
+  pages={1130--1154},
+  year={1980},
+  publisher={INFORMS}
+}
+
+@article{pisinger1995minimal,
+  title={A minimal algorithm for the multiple-choice knapsack problem},
+  author={Pisinger, David},
+  journal={European Journal of Operational Research},
+  volume={83},
+  number={2},
+  pages={394--410},
+  year={1995},
+  publisher={Elsevier}
+}
