--- a/doc/pubs/ICTAI20152/tex/core.tex
+++ b/doc/pubs/ICTAI20152/tex/core.tex
@@ -1,14 +1,96 @@
-The core concept was first presented for the well-known 0-1 knapsack problem (KP),
+The core concept was first presented for the one-dimensional 0-1 knapsack problem (KP),
 leading to very successful KP algorithms.
-The main idea is to reduce the original problem by only considering a core of
-items for which it is hard to decide if they will occur in an optimal solution
-or not, whereas the variables for all items outside the core are fixed to certain values.
+The main idea is to reduce the original problem by only considering a set of
+items for which it is hard to decide if they will occur or not in an optimal solution.
+This set of items is named core.
+The variables for all items outside the core are fixed to certain values.
 
-- Eficieny measure...
+The KP considers items $j = 1, \ldots, n$, associated profits $p_j$ and
+associated weights $w_j$.
+A subset of these items has to be selected and packed into a knapsack having capacity $c$.
+The total profit of the items in the knapsack has to be maximized, while the
+total weight is not allowed to exceed $c$.
 
-- the core problem (KPC)
+If the items are sorted according to descreasing efficiency values
+\begin{displaymath}
+  e_j = \frac{p_j}{w_j},
+\end{displaymath}
+it is well known that the solution of the LP-relaxation consists in general of
+three consecutive parts: The fisrt part contains variables set to $1$, the second
+pare consists of at most on split item $s$, whose corresponding LP-values is
+factional, and finally the remaining variables, which are always set to zero,
+form the third part.
+For most instance of KP (except those with a very special structure) the integer
+optimial solution closely corresponds to this partitioning in the sense that it
+contains most of the highly efficient items of the first part, some items with
+medium efficiencies near the split item, and almost no items with low efficiencies
+from the third part.
+Items of medium efficiency constitute the so called core.
 
-- core concept for MKP
-  - Efficiency measure... (sketch...) the dual efficieny measure
-  - the Multidimentional kanspack core problem (MKPC)
+Balas and Zemel~\cite{balas1980algorithm} gave the following precise definition
+of the core of a KP, based on the knowledge of an optimal integer solution $x^*$.
+Assume that the items are sorted according to descreasing efficiencies and let
+\begin{displaymath}
+  a := \min\{ j | x_k^* = 0 |\}, \quad b := \max\{ j | x_j^* = 1 \}.
+\end{displaymath}
+The core is given by the items in the interval $C = \{a, \ldots, b\}$.
+It is obvious that the split item is always part of the core.
+
+The KP Core problem (KPC) is defined as
+\begin{align*}
+  \text{maximize} & \sum_{j \in C} p_j x_j  + \tilde{p}\\
+  \text{subject to} & \sum_{j \in C} w_{j} x_j \leqslant c - \tilde{w}\\
+  & x_j \in \{0, 1\}, \quad j \in C.
+\end{align*}
+with $\tilde{p} = \sum^{a-1}_{j=1} p_j$  and $\tilde{w} = \sum^{a-1}_{j=1} w_j$.
+The solution of KPC would suffice to compute teh optimal solution of KP, which
+however, has to be already partially known to determine $C$.
+Nevertheless an approximate core of fixed size $c = \{s-\lambda, \ldots, s+\lambda\}$,
+given a $\lambda$, can be considered for a heuristic reduction of MKP problem.
+
+\subsection{The Core Concept for MKP}
+
+The previous definition of the core for KP can be expanded to MKP without major difficulties,
+once an efficiency measure $e$ is defined for the MKP,
+as presented by Puchinger, Raidl and Pferschy~\cite{puchinger2006core}.
+Although an efficiency measure for MKP is not obvious due the
+multidimensional weight of the items.
+
+In \cite{puchinger2006core} various proposals for efficiency measure was
+investigated and...
+\begin{displaymath}
+  e = \frac{p_j}{\sum_{i=1}^m r_iw_{ij}}
+\end{displaymath}
+where $r_i$ are set to the values of an optimal solution to the dual problem of
+the MKP's LP-relaxation, as suggested in \cite{Chu-Beasley-1998}.
+
+Let $x^*$ be an optimal solution and assume that the items are sorted according
+to decreasing efficiency $e$, then let
+\begin{displaymath}
+  a_e = \min \{ j | x_j^* = 0 \}, \quad b_e = \max \{ j | x_j^* = 1 \}.
+\end{displaymath}
+The core is given by the items in the interval $C_e = \{ a_e, \ldots, b_e \}$,
+and the multidimensional knapsack core problem (MKPC) defined as
+\begin{align*}
+  \text{maximize} & \sum_{j \in C} p_j x_j  + \tilde{p}\\
+  \text{subject to} & \sum_{j \in C} w_{ij} x_j \leqslant c_i - \tilde{w}_i, \quad i = 1, \ldots, m\\
+  & x_j \in \{0, 1\}, \quad j \in C.
+\end{align*}
+with $\tilde{p} = \sum^{a-1}_{j=1} p_j$  and $\tilde{w}_i = \sum^{a-1}_{j=1} w_{ij}, i = 1, \ldots, m$.
+
+In contrast to KP, the solution of the LP-relaxation of MKP in general does not
+consists of a single fractional split item. But up to $m$ fractional values give
+rise to a whole split interval $S_e = \{ s_e, \ldots, t_e \}$, where
+$s_e$ and $t_e$ are the first and the last index of variables with fractional
+values after sorting by efficiency $e$.
+
+
+
+\cite{puchinger2006core}
+
+% - Eficieny measure...
+% - the core problem (KPC)
+% - core concept for MKP
+%  - Efficiency measure... (sketch...) the dual efficieny measure
+%  - the Multidimentional kanspack core problem (MKPC)
 
