--- a/doc/pubs/ICTAI20152/tex/core.tex
+++ b/doc/pubs/ICTAI20152/tex/core.tex
@@ -45,31 +45,39 @@ The KP Core problem (KPC) is defined as
 with $\tilde{p} = \sum^{a-1}_{j=1} p_j$  and $\tilde{w} = \sum^{a-1}_{j=1} w_j$.
 The solution of KPC would suffice to compute teh optimal solution of KP, which
 however, has to be already partially known to determine $C$.
-Nevertheless an approximate core of fixed size $c = \{s-\lambda, \ldots, s+\lambda\}$,
-given a $\lambda$, can be considered for a heuristic reduction of MKP problem.
+Nevertheless an approximate core $C = \{s-\delta, \ldots, s+\delta\}$,
+of fixed size $|C| = 2\delta+1$ is considered for a heuristic reduction of the problem.
+
+Figure~\ref{fig:kpcore} exemplifies the core of a hypothetical KP instance with
+$13$ items.
+The first row represents the efficiency value of each item and the second row
+represents the value of each variable on the LP-relaxation optimal solution.
+The items are sorted in descending order of efficiency value.
+The last row illustrates the variable fixing after the defined core.
+An asterisk indicates a free variable.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.37]{imgs/kp}
+  \caption{Example of core for a hypothetical KP instance with $n=13$ and core size of $5$ ($\delta = 2$).}
+  \label{fig:kpcore}
+\end{figure}
 
 \subsection{The Core Concept for MKP}
 
-The previous definition of the core for KP can be expanded to MKP without major difficulties,
-once an efficiency measure $e$ is defined for the MKP,
-as presented by Puchinger, Raidl and Pferschy~\cite{puchinger2006core}.
-Although an efficiency measure for MKP is not obvious due the
+The previous definition of the core for KP can be extended to MKP without major
+difficulties, once an efficiency measure is defined for the MKP,
+as addressed in \cite{puchinger2006core}.
+Even though a proper efficiency measure for MKP is not obvious due the
 multidimensional weight of the items.
+A well accepted efficiency measure is discussed in Section~\ref{subsec:dual}.
 
-In \cite{puchinger2006core} various proposals for efficiency measure was
-investigated and...
+Let $x^*$ be an optimal solution and assume that the items are sorted in
+descending order after a given efficiency. Then let
 \begin{displaymath}
-  e = \frac{p_j}{\sum_{i=1}^m r_iw_{ij}}
+  a = \min \{ j | x_j^* = 0 \}, \quad b = \max \{ j | x_j^* = 1 \}.
 \end{displaymath}
-where $r_i$ are set to the values of an optimal solution to the dual problem of
-the MKP's LP-relaxation, as suggested in \cite{Chu-Beasley-1998}.
-
-Let $x^*$ be an optimal solution and assume that the items are sorted according
-to decreasing efficiency $e$, then let
-\begin{displaymath}
-  a_e = \min \{ j | x_j^* = 0 \}, \quad b_e = \max \{ j | x_j^* = 1 \}.
-\end{displaymath}
-The core is given by the items in the interval $C_e = \{ a_e, \ldots, b_e \}$,
+The core is given by the items in the interval $C = \{ a, \ldots, b \}$,
 and the multidimensional knapsack core problem (MKPC) defined as
 \begin{align*}
   \text{maximize} & \sum_{j \in C} p_j x_j  + \tilde{p}\\
@@ -80,10 +88,38 @@ with $\tilde{p} = \sum^{a-1}_{j=1} p_j$  and $\tilde{w}_i = \sum^{a-1}_{j=1} w_{
 
 In contrast to KP, the solution of the LP-relaxation of MKP in general does not
 consists of a single fractional split item. But up to $m$ fractional values give
-rise to a whole split interval $S_e = \{ s_e, \ldots, t_e \}$, where
-$s_e$ and $t_e$ are the first and the last index of variables with fractional
-values after sorting by efficiency $e$.
+rise to a whole \emph{split interval} $S = \{ s_1, \ldots, s_m\}$, where
+$s_1$ and $s_m$ are respectively the first and the last index of variables with
+fractional values after sorting by the given efficiency measure.
+Once the split interval is defined, a central index value $s = \lfloor \frac{s_1+s_m}{2}\rfloor$
+can be used as the center of a approximate core.
 
+\subsection{The Dual-variable Efficiency Measure}
+\label{subsec:dual}
+In \cite{puchinger2006core} several proposals for efficiency measure was
+investigated and...
+
+\begin{displaymath}
+ x_l^{LP} =
+  \begin{cases}
+    1         & \mbox{if } e_j > 1, \\
+    \in [0,1] & \mbox{if } e_j = 1, \\
+    0         & \mbox{if } e_j < 1.
+  \end{cases}
+\end{displaymath}
+
+\begin{displaymath}
+  e = \frac{p_j}{\sum_{i=1}^m r_iw_{ij}}
+\end{displaymath}
+where $r_i$ are set to the values of an optimal solution to the dual problem of
+the MKP's LP-relaxation, as suggested in \cite{Chu-Beasley-1998}.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.37]{imgs/mkp}
+  \caption{Example of core for a hypothetical MKP instace with $n=13$, $m=3$ and core size of $7$ ($\delta = 3$).}
+  \label{fig:mkpcore}
+\end{figure}
 
 
 \cite{puchinger2006core}
