peq. ajustes no diagrama core. ICTAI2015

--- a/doc/pubs/ICTAI20152/tex/core.tex
+++ b/doc/pubs/ICTAI20152/tex/core.tex
@@ -58,7 +58,7 @@ An asterisk indicates a free variable.
 
 \begin{figure}[h]
   \centering
-  \includegraphics[scale=0.37]{imgs/kp}
+  \includegraphics[scale=0.37]{imgs/kp_2}
   \caption{Example of core for a hypothetical KP instance with $n=13$ and core size of $5$ ($\delta = 2$).}
   \label{fig:kpcore}
 \end{figure}
@@ -116,7 +116,7 @@ the MKP's LP-relaxation, as suggested in \cite{Chu-Beasley-1998}.
 
 \begin{figure}[h]
   \centering
-  \includegraphics[scale=0.37]{imgs/mkp}
+  \includegraphics[scale=0.37]{imgs/mkp_2}
   \caption{Example of core for a hypothetical MKP instace with $n=13$, $m=3$ and core size of $7$ ($\delta = 3$).}
   \label{fig:mkpcore}
 \end{figure}
