--- a/doc/pubs/ICTAI20152/tex/paper.tex
+++ b/doc/pubs/ICTAI20152/tex/paper.tex
@@ -61,18 +61,13 @@ demanding a very small amount of processing time.
 \label{sec:intro}
 \input{intro.tex}
 
-\section{The core concept}
+\section{The core concept for MKP}
 \label{sec:core}
 \input{core.tex}
 
 \section{The shuffled complex evolution for the MKP}
 \label{sec:sce}
 \input{sce.tex}
-
-\section{Core application...}
-\label{sec:core-sce}
-\input{core-sce.tex}
-
 
 \section{Computational experiments}
 \label{sec:exp}
