--- a/doc/pubs/ICTAI20152/tex/paper.tex
+++ b/doc/pubs/ICTAI20152/tex/paper.tex
@@ -26,18 +26,18 @@
 \title{A shuffled complex evolution algorithm for
 the multidimensional knapsack problem using core concept}
 
-\author{\IEEEauthorblockN{Marcos Daniel Valad\~ao Baroni}
-\IEEEauthorblockA{ Departamento de Inform\'atica\\
-Universidade Federal do Esp\'irito Santo\\
-Vit\'oria, Esp\'irito Santo, Brazil\\
-Email: mbaroni@ninfa.inf.ufes.br }
-\and
-\IEEEauthorblockN{Fl\'avio Miguel Varej\~ao}
-\IEEEauthorblockA{ Departamento de Inform\'atica\\
-Universidade Federal do Esp\'irito Santo\\
-Vit\'oria, Esp\'irito Santo, Brazil\\
-Email: fvarejao@ninfa.inf.ufes.br }
-}
+%\author{\IEEEauthorblockN{Marcos Daniel Valad\~ao Baroni}
+%\IEEEauthorblockA{ Departamento de Inform\'atica\\
+%Universidade Federal do Esp\'irito Santo\\
+%Vit\'oria, Esp\'irito Santo, Brazil\\
+%Email: mbaroni@ninfa.inf.ufes.br }
+%\and
+%\IEEEauthorblockN{Fl\'avio Miguel Varej\~ao}
+%\IEEEauthorblockA{ Departamento de Inform\'atica\\
+%Universidade Federal do Esp\'irito Santo\\
+%Vit\'oria, Esp\'irito Santo, Brazil\\
+%Email: fvarejao@ninfa.inf.ufes.br }
+%}
 
 \maketitle
 
@@ -50,10 +50,9 @@ not selected in good solutions.
 This concept is used to reduce the original size of MKP instances.
 %The SCE regards a natural evolution happening simultaneously in independent communities.
 The performance of the SCE applied to the reduced MKP is verified through computational experiments
-using well-known instances from literature and randomly generated problems as well.
+using well-known instances from literature.
 The approach proved to be very effective in finding near optimal solutions
 demanding a very small amount of processing time.
-
 \end{abstract}
 \IEEEpeerreviewmaketitle
 
@@ -77,6 +76,8 @@ demanding a very small amount of processing time.
 \section{Conclusions and future remarks}
 \label{sec:conc}
 \input{concl.tex}
+
+%\newpage
 
 %\bibliographystyle{abbrv}
 \bibliographystyle{IEEEtran}
