--- a/doc/pubs/ICTAI20152/tex/sce.tex
+++ b/doc/pubs/ICTAI20152/tex/sce.tex
@@ -11,9 +11,8 @@ based evolutionary optimization algorithm that regards a natural
 evolution happening simultaneously in independent communities.
 The algorithm works with a population partitioned in $N$ complexes, each one
 having $M$ individuals.
-In the next Subsection the SCE is explained in more details.
-In the later Subsection the application of SCE to the multidimensional knapsack
-problem is considered.
+In subsection~\ref{subsec:sce} the SCE is explained in more details,
+while subsection~\ref{subsec:scemkp} considers its application to MKP.
 % In the SCE the population is partitioned into communities (complexes), each of which
 % will evolve independently through a number of evolving steps.
 % In each evolving step a subset of the complex (subcomplex) is selected as potencial group of
@@ -23,6 +22,7 @@ problem is considered.
 %from a random location of the feasible space and introduced to the complex.
 
 \subsection{The shuffled complex evolution}
+\label{subsec:sce}
 In the SCE a population of $N*M$ individuals is randomly taken from the
 feasible solution space.
 After this initializing the population is sorted by descending order according
@@ -31,10 +31,11 @@ The entire population is then partitioned (shuffled) into $N$ complexes,
 each containing $M$ individuals.
 In this shuffling process the first individual goes to the first complex, the second
 individual goes to the second complex, individual $N$ goes to $N$-th complex,
-individual $M+1$ goes back to the first complex, etc.
+individual $(M+1)$-th goes back to the first complex, etc.
 
 The next step after shuffling the complexes is to evolve each complex through
 a given fixed amount of $K'$ steps.
+The individuals in each complex is sorted by descending order of fitness quality.
 In each step a subcomplex of $P$ individuals is selected from the
 complex using a triangular probability distribution, where the $i$-th individual
 has a probability $p_i = \frac{2(n+1-i)}{n(n+1)}$ of being selected.
@@ -54,10 +55,11 @@ Finally, if all the crossing steps couldn't generate a better individual,
 the worst individual of the subcomplex is replaced by a new random solution taken
 from the feasible solution space.
 This last step is important to prevent the algorithm becoming trapped in local minima.
-Fig.~\ref{fig:flow2} presents the procedure described above in a flowchart diagram.
+Fig.~\ref{fig:flow2} presents the evolving procedure described above in a flowchart diagram.
 
 After evolving all the $N$ complexes the whole population is again
-sorted by descending and the process continues until a stop condition is satisfied.
+sorted by descending order of fitness quality and the process continues until
+a stop condition is satisfied.
 Fig.~\ref{fig:flow1} shows the SCE algorithm in a flowchart diagram.
 
 \begin{figure}
@@ -74,13 +76,14 @@ Fig.~\ref{fig:flow1} shows the SCE algorithm in a flowchart diagram.
 
 
 \subsection{The shuffled complex evolution for the MKP}
+\label{subsec:scemkp}
 
-As it can be noted in its description the SCE is easly applied to any
+As it can be noted in its description the SCE is easily applied to any
 optimization problem.
 The only steps needed to be specified is (a) the creation of a new random
 solution and (b) the crossing procedure of two solutions.
-These two procedures are respectively presented by Fig.~\ref{alg:new} and
-Fig.~\ref{alg:cross}.
+These two procedures are respectively presented by algorithms on
+Fig.~\ref{alg:new} and Fig.~\ref{alg:cross}.
 
 \begin{figure}
 \begin{algorithmic}[1]
@@ -128,6 +131,7 @@ After trying to place all available items the new solution is returned.
 \label{alg:cross}
 \end{figure}
 
+\newpage
 The crossing procedure (Fig.~\ref{alg:cross}) takes as input the worst
 solution taken from the subcomplex $x^w = (x^w_1, x^w_2, \ldots, x^w_n$),
 the selected better solution $x_b = (x^b_1, x^b_2, \ldots, x^b_n$)
