--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -268,6 +268,15 @@ year = {1996},
 masid = {2049552}
 }
 
+@incollection{glover1996critical,
+  title={Critical event tabu search for multidimensional knapsack problems},
+  author={Glover, Fred and Kochenberger, Gary A},
+  booktitle={Meta-Heuristics},
+  pages={407--427},
+  year={1996},
+  publisher={Springer}
+}
+
 @inproceedings{Khuri-1994,
 author = {Sami Khuri and Thomas Bäck and Jörg Heitkötter},
 title = {{The zero/one multiple knapsack problem and genetic algorithms}},
@@ -891,4 +900,21 @@ masid = {694811}
   pages={394--410},
   year={1995},
   publisher={Elsevier}
+}
+
+@online{ORLibrary,
+  author = {John E. Beasley},
+  title = {OR Library},
+  year = 2012,
+  url = {http://www.brunel.ac.uk/~mastjjb/jeb/info.html},
+  urldate = {2015-07-10}
+}
+
+@article{mcmillan1973resource,
+  title={Resource allocation via 0--1 programming},
+  author={McMillan, C and Plaine, DR},
+  journal={Decision Sciences},
+  volume={4},
+  pages={119--132},
+  year={1973}
 }
