melhorias no paper (algoritmos)

--- a/doc/pubs/CIARP2015/tex/paper.tex
+++ b/doc/pubs/CIARP2015/tex/paper.tex
@@ -3,6 +3,7 @@
 %\usepackage{makeidx}  % allows for indexgeneration
 \usepackage{amsfonts}
 \usepackage{amssymb,amsmath}
+\usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{graphicx}
 \usepackage{multicol}
