peq. acertos no tex. limpando arquivos (CIARP2015)

--- a/doc/pubs/CIARP2015/tex/exp.tex
+++ b/doc/pubs/CIARP2015/tex/exp.tex
@@ -1,7 +1,7 @@
 For the computational experiments a batch of tests was driven to find the best
 parameters for the problem.
 Afterwards two main tests was considered:
-(a) using the well-known set of problems defined by Chu and Beasley (\cite{Chu-Beasley-1998})
+(a) using the well-known set of problems defined by Chu and Beasley \cite{Chu-Beasley-1998}
 and (b) a large set of randomly generated instances using uniform distribution.
 
 \subsection{The Chu-Beasley instances}
