--- a/doc/pubs/CIARP2015/tex/paper.tex
+++ b/doc/pubs/CIARP2015/tex/paper.tex
@@ -21,8 +21,7 @@
 the multidimensional knapsack problem}
 
 \author{
-   Marcos Daniel Valad\~ao Baroni
-   \thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.}
+   Marcos Daniel Valad\~ao Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.}
    \and
    Fl\'avio Miguel Varej\~ao
 }
